# ContractIntelligenceHub

./: README.md  invoke.py  pyproject.toml  sk.py  test.py
coninthub/: app.py
coninthub/contract_meta_manager/: contractManager.py  contractMetadata.py
coninthub/negotiation_monitor/: main.py
coninthub/playbook_manager/: playbookManager.py
coninthub/sk_plugins/: AlphaVantagePlugin.py  __init__.py
modules/negotiation/: conversation.py
modules/stock/: __init__.py  alphaVantagePlugin.py
plugins/: configure_services.py
plugins/negotiation/: negotiation.py
plugins/ruleset/: ruleset.py
plugins/stock/: commodityprice.py
plugins/utils/: analyze_commodity_price.jinja2  analyze_market_news.jinja  contract_metadata.json  negotiation_monitor.jinja2  renewal.jinja2  ruleset.jinja2  system.jinja2
src/: app.py
src/contract_meta_manager/ContractData/: contractData.json
src/sk_plugins/: AlphaVantagePlugin.py
